fix the view on firefox

--- a/M2A/src/styles/global.css
+++ b/M2A/src/styles/global.css
@@ -407,6 +407,9 @@
   margin-bottom: 5px !important;
   font-size: 20px !important;
 }
+#mediaTabs .ant-tabs-top-bar {
+  height: 50px !important;
+}
 
 .detailCard li svg {
   margin-bottom: 6px !important;
